--- a/app/views/info/_no_status_grades_table.haml
+++ b/app/views/info/_no_status_grades_table.haml
@@ -27,9 +27,10 @@
               %button.button.select-all= "Check"
               %button.button.select-none= "Uncheck"
           %tbody
-            - grades.each do |g|
-              - student = g.student
+            - grades.each do |grade|
+              - student = grade.student
               - team = student.team_for_course(course)
+              - group = grade.group
               %tr
                 - if assignment.is_individual?
                   %td= link_to student.first_name, student_path(student)
@@ -37,14 +38,20 @@
                   %td
                     - if course.has_teams? && student.present? && team.present?
                       = link_to team.name, team
-                  %td= points g.score
-                  %td= raw g.feedback
+                - elsif assignment.has_groups?
+                  %td= link_to group.try(:name), group_path(group)
+                %td= points grade.score
+                %td= raw grade.feedback
                 %td
                   .right
                     %ul.button-bar
-                      %li= link_to glyph(:eye) + "See Grade", assignment_grade_path(g.assignment, :student_id => g.student_id), :class => "button"
-                      %li= link_to glyph(:edit) + "Edit Grade", edit_assignment_grade_path(:assignment_id => assignment.id, :student_id => student.try(:id)), :class => "button"
-                %td.center= check_box_tag "grade_ids[]", g.id, false, data: { behavior: "toggle-disable-list-command", commands: "[data-behavior='selected-in-progress-grades-command']" }
+                      - if assignment.is_individual?
+                        %li= link_to glyph(:eye) + "See Grade", assignment_grade_path(assignment, :student_id => student.id), :class => "button"
+                        %li= link_to glyph(:edit) + "Edit Grade", edit_assignment_grade_path(:assignment_id => assignment.id, :student_id => student.id), :class => "button"
+                      - elsif assignment.has_groups?
+                        %li= link_to glyph(:eye) + "See Grade", assignment_grade_path(assignment, :group_id => group.id), :class => 'button'
+                        %li= link_to glyph(:check) + "Edit Grade", group_grade_assignment_path(assignment, :group_id => group.id), :class => "button"
+                %td.center= check_box_tag "grade_ids[]", grade.id, false, data: { behavior: "toggle-disable-list-command", commands: "[data-behavior='selected-in-progress-grades-command']" }
       .submit-buttons
         .right
           = submit_tag "Update Selected Grade Statuses", :class => "button disabled", disabled: true, data: { behavior: "selected-in-progress-grades-command" }
