--- a/app/views/info/_ungraded_submissions_table.haml
+++ b/app/views/info/_ungraded_submissions_table.haml
@@ -12,39 +12,35 @@
         - if assignment.is_individual?
           %th{:scope => "col", :width => "7%"} First Name
           %th{:scope => "col", :width => "7%"} Last Name
-          %th Date Submitted
           - if course.has_teams?
             %th{:scope => "col", :width => "15%"}= "#{term_for :team}"
         - elsif assignment.has_groups?
           %th{:scope => "col"} Group
+        %th Date Submitted
         %th{:scope => "col", :style => "min-width: 200px"}
           %span.sr-only Actions
     %tbody
-      - submissions.each do |ug|
-        - if ug.ungraded?
-          - student = ug.student
-          - ug_assignment = ug.assignment
-          - ug_group = ug.group
-          %tr
-            - if ug_assignment.is_individual?
-              - team = student.team_for_course(course)
-              %td= link_to student.first_name, student_path(student)
-              %td= link_to student.last_name, student_path(student)
-              %td= ug.updated_at
-              %td
-                - if course.has_teams? && student.present? && team.present?
-                  = link_to team.name, team
-              %td
-                .right
-                  %ul.button-bar
-                    %li= link_to glyph(:eye) + "See Submission", assignment_submission_path(ug_assignment, :id => ug.id), :class => "button"
-                    %li= link_to glyph(:check) + "Grade", edit_assignment_grade_path(:assignment_id => assignment.id, :student_id => student.try(:id)), :class => "button"
-            - elsif ug_assignment.has_groups?
-              %td= link_to ug_group.try(:name), group_path(ug_group)
-              %td= ug.updated_at
-              %td
-                .right
-                  %ul.button-bar
-                    %li= link_to glyph(:eye) + "See Submission",assignment_submission_path(ug_assignment.id, :id => ug.id), :class => 'button'
-                    %li= link_to glyph(:check) + "Grade", group_grade_assignment_path(ug_assignment, :group_id => ug_group), :class => "button"
+      - submissions.each do |submission|
+        - student = submission.student
+        - team = student.team_for_course(course)
+        - group = submission.group
+        %tr
+          - if assignment.is_individual?
+            %td= link_to student.first_name, student_path(student)
+            %td= link_to student.last_name, student_path(student)
+            %td
+              - if course.has_teams? && student.present? && team.present?
+                = link_to team.name, team
+          - elsif assignment.has_groups?
+            %td= link_to group.try(:name), group_path(group)
+          %td= submission.updated_at
+          %td
+            .right
+              %ul.button-bar
+                - if assignment.is_individual?
+                  %li= link_to glyph(:eye) + "See Submission", assignment_submission_path(assignment, :id => submission.id), :class => "button"
+                  %li= link_to glyph(:check) + "Grade", edit_assignment_grade_path(:assignment_id => assignment.id, :student_id => student.id), :class => "button"
+                - elsif assignment.has_groups?
+                  %li= link_to glyph(:eye) + "See Submission", assignment_submission_path(assignment.id, :id => submission.id), :class => 'button'
+                  %li= link_to glyph(:check) + "Grade", group_grade_assignment_path(assignment, :group_id => group), :class => "button"
   %hr.dotted
