--- a/app/views/teams/_form.html.haml
+++ b/app/views/teams/_form.html.haml
@@ -13,7 +13,7 @@
       = f.association :students, :collection => current_course.students, as: :select
 
     .form-item
-      = f.association :leaders, :as => :check_boxes, :collection => current_course.gsis
+      = f.association :leaders, :as => :check_boxes, :collection => current_course.staff
 
   %section
     %h4 Leaderboard Settings
