--- a/app/views/info/_grades_management_table.haml
+++ b/app/views/info/_grades_management_table.haml
@@ -18,7 +18,7 @@
     %tbody
       - grades.each do |grade|
         - student = grade.student
-        - team = student.team_for_course(course)
+        - team = student.team_for_course(course) if student
         - group = grade.group
         %tr
           - if assignment.is_individual?
@@ -40,4 +40,4 @@
                 - elsif assignment.has_groups?
                   %li= link_to glyph(:eye) + "See Grade", assignment_grade_path(assignment, :group_id => group.id), :class => 'button'
                   %li= link_to glyph(:check) + "Edit Grade", group_grade_assignment_path(assignment, :group_id => group.id), :class => "button"
-          %td.center= check_box_tag "grade_ids[]", grade.id, false, data: { behavior: "toggle-disable-list-command", commands: "[data-behavior='selected-in-progress-grades-command']" }
+          %td.center= check_box_tag "grade_ids[]", grade.id, false, data: { behavior: "toggle-disable-list-command", commands: "[data-behavior='selected-#{grade_type}-grades-command']" }
