--- a/app/views/info/_no_status_grades_table.haml
+++ b/app/views/info/_no_status_grades_table.haml
@@ -9,7 +9,7 @@
       = link_to 'Quick Grade', mass_grade_assignment_path(assignment), :class => "button"
 
     = form_tag edit_status_grades_assignment_path(assignment), method: :get do
-      = render "grades_management_table", { assignment: assignment, grades: grades, course: course }
+      = render "grades_management_table", { assignment: assignment, grades: grades, course: course, grade_type: 'in_limbo' }
       .submit-buttons
         .right
           = submit_tag "Update Selected Grade Statuses", :class => "button disabled", disabled: true, data: { behavior: "selected-in-progress-grades-command" }
