--- a/app/views/info/_unreleased_grades_table.haml
+++ b/app/views/info/_unreleased_grades_table.haml
@@ -12,7 +12,7 @@
         = link_to glyph(:check) + "Grade", assignment, :class => "button"
 
     = form_tag edit_status_grades_assignment_path(assignment), method: :get do
-      = render "grades_management_table", { assignment: assignment, grades: grades, course: course }
+      = render "grades_management_table", { assignment: assignment, grades: grades, course: course, grade_type: 'unreleased' }
 
       .submit-buttons
         .right
