--- a/app/assets/stylesheets/_forms.sass
+++ b/app/assets/stylesheets/_forms.sass
@@ -243,8 +243,56 @@ input[type=text]
 .switch label
   margin-top: 1px
 
-.pass-fail-contingent.off
-  visibility: hidden
+input#grade_pass_fail_status
+  max-height: 0
+  max-width: 0
+  opacity: 0
 
-.pass-fail-grade-toggle
-  padding-bottom: 16px
+input#grade_pass_fail_status + label
+  display: block
+  position: relative
+  text-indent: -5000px
+  height: 1.5rem
+  width: 50px
+  border-radius: 15px
+  background: $color-red-1
+  &:hover
+    cursor: pointer !important
+
+
+input#grade_pass_fail_status + label:before
+  content: ""
+  position: absolute
+  display: block
+  height: 1.5rem
+  width: 1.5rem
+  top: 0
+  left: 0
+  border-radius: 15px
+  background: $color-green-2
+  -moz-transition: .25s ease-in-out
+  -webkit-transition: .25s ease-in-out
+  transition: .25s ease-in-out
+
+input#grade_pass_fail_status + label:after
+  content: ""
+  position: absolute
+  display: block
+  height: 1.5rem
+  width: 1.5rem
+  top: 0
+  left: 0px
+  border-radius: 15px
+  background: $color-white
+  box-shadow: inset 0 0 0 1px $color-grey-5
+  -moz-transition: .25s ease-in-out
+  -webkit-transition: .25s ease-in-out
+  transition: .25s ease-in-out
+
+input#grade_pass_fail_status:checked + label:before
+  width: 50px
+  background: $color-green-2
+
+input#grade_pass_fail_status:checked + label:after
+  left: 30px
+  box-shadow: inset 0 0 0 1px $color-grey-5
