--- a/app/views/students/syllabus/_instructor_table.haml
+++ b/app/views/students/syllabus/_instructor_table.haml
@@ -67,6 +67,7 @@
               %li= link_to glyph(:edit) + "Edit Grade", edit_assignment_grade_path(assignment.id, student_id: @student.id), class: "button"
             - elsif assignment.has_groups?
               %li= link_to glyph(:edit) + "Edit Grade", group_grade_assignment_path(assignment, group_id: group), class: "button"
+            %li= link_to glyph("hand-scissors-o") + "Exclude", exclude_grades_assignment_path(id: grade.id), class: "button", data: { confirm: "Are you sure?" }, :method => :post
           - else
             - if assignment.is_individual?
               %li= link_to glyph(:check) + "Grade", edit_assignment_grade_path(assignment_id: assignment.id, student_id: @student.id), class: "button"
