add points adjustment to rubric grades

--- a/app/assets/stylesheets/_grades.sass
+++ b/app/assets/stylesheets/_grades.sass
@@ -62,3 +62,6 @@ select#grade_raw_score[disabled], input[type=text]#grade_raw_score[disabled]
 .gradebox
   input
     border: none
+
+.points-adjustment-feedback
+  margin-right: 1rem;
