styling for points adjustment

--- a/app/assets/stylesheets/_rubrics.sass
+++ b/app/assets/stylesheets/_rubrics.sass
@@ -362,6 +362,13 @@ button.delete
   h4.notice
     color: $color-green-2
 
+
+.points-adjustment-feedback
+  margin-right: 1rem;
+
+.total-points
+  margin-bottom: 1rem;
+
 #grade-rubric-table.edit
   .level:hover
     background-color: $color-green-2
