--- a/app/assets/stylesheets/_grades.sass
+++ b/app/assets/stylesheets/_grades.sass
@@ -63,5 +63,5 @@ select#grade_raw_score[disabled], input[type=text]#grade_raw_score[disabled]
   input
     border: none
 
-.points-adjustment-feedback
-  margin-right: 1rem;
+.grade-points-adjustment
+ border: 1pt $color-blue-4 solid
