--- a/app/views/pages/_newsletter_signup.haml
+++ b/app/views/pages/_newsletter_signup.haml
@@ -1,5 +1,5 @@
 .newsletter_bar
-  .title Sign up for our newsletter:
+  .title Want to stay in touch?
   %span#mc_embed_signup
     <form action="//gradecraft.us10.list-manage.com/subscribe/post?u=327d145979b0ee62cf25c3dad&amp;id=a13009377f" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
     %span#mc_embed_signup_scroll
