--- a/app/views/assignments/group/_table_body.html.haml
+++ b/app/views/assignments/group/_table_body.html.haml
@@ -39,7 +39,7 @@
               - grade = group_presenter.grade_for(student)
               %td
                 - if grade.present? && grade.instructor_modified?
-                  = points grade.raw_score
+                  = points grade.final_score
               - if group_presenter.assignment.assignment_type.student_weightable?
                 %td
                   - if grade.present?
