--- a/app/views/grades/_group_show.html.haml
+++ b/app/views/grades/_group_show.html.haml
@@ -21,21 +21,20 @@
 
   - if current_user_is_student?
     - if presenter.grade_for(current_student).present?
-      - if current_user_is_student?
-        %p.bold Your Results
-      - else
-        %p.bold
-          #{current_student.first_name}'s Grade
-          %span= link_to "Edit", edit_assignment_grade_path(presenter.assignment, student_id: current_student.id), class: "button"
-
+      %p.bold Your Results
       - grade = presenter.grade_for(current_student)
       %p
-        %span.bold= "#{points grade.raw_score }"
+        %span.bold= "#{points grade.final_score }"
         %span=" / #{points presenter.assignment.point_total } possible points"
-      - if grade.assignment.release_necessary? && current_user_is_staff?
-        %p
-          Status:
-          %span.bold= grade.status
+
+      - if grade.points_adjustment != 0
+        %div.grade-points-adjustment
+          %p
+            %span Points Adjustment:
+            %span= grade.points_adjustment
+          - if grade.points_adjustment_feedback.present?
+            %p= raw grade.points_adjustment_feedback
+
       - if grade.feedback.present?
         %p.bold Instructor Feedback:
         %p= raw grade.feedback
@@ -52,7 +51,7 @@
 
           - grade = presenter.grade_for(student)
           %p
-            %span.bold= "#{points grade.raw_score }"
+            %span.bold= "#{points grade.final_score }"
             %span=" / #{points presenter.assignment.point_total } possible points"
           - if presenter.grade_for(student).assignment.release_necessary?
             %p
