--- a/app/views/grades/_individual_show.html.haml
+++ b/app/views/grades/_individual_show.html.haml
@@ -17,7 +17,7 @@
         %span= "the #{term_for :assignment}."
       - elsif grade.score.present?
         %span You earned
-        %span.bold= "#{points grade.raw_score }"
+        %span.bold= "#{points grade.final_score }"
         %span=" out of #{points presenter.assignment.point_total } possible points."
 
   - if grade.points_adjustment != 0
@@ -28,14 +28,15 @@
       - if grade.points_adjustment_feedback.present?
         %p= raw grade.points_adjustment_feedback
 
-
     - if presenter.assignment.release_necessary? && current_user_is_staff?
       %p
         %span.small_uppercase Status:
         %span.bold= grade.status
+
     - if grade.feedback.present?
       %span.small_uppercase Your Feedback:
       %p= raw grade.feedback
+
     - if grade.grade_files.present?
       %hr
       %h4.uppercase Attachments from Grader
