final points helper for existing grades

--- a/app/assets/stylesheets/_grades.sass
+++ b/app/assets/stylesheets/_grades.sass
@@ -63,5 +63,5 @@ select#grade_raw_score[disabled], input[type=text]#grade_raw_score[disabled]
   input
     border: none
 
-.grade-points-adjustment
+.grade-adjustment-points
  border: 1pt $color-blue-4 solid
